# dnn-from-scratch

./: Cargo.toml  README.md  crates.js  help.html  index.html  search-index.js  settings.html  src-files.js
dnn_from_scratch/: Cargo.toml  all.html  index.html  sidebar-items.js
dnn_from_scratch/loss/: index.html  sidebar-items.js  struct.Loss.html
dnn_from_scratch/neural_network/: index.html  struct.NeuralNetwork.html
dnn_from_scratch/report/: index.html  sidebar-items.js  struct.ReportData.html
dnn_from_scratch/src/: activation.rs  fully_connected.rs  lib.rs  loss.rs  neural_network.rs  optimizer.rs  report.rs  utils.rs  weights_initializer.rs
dnn_from_scratch/utils/: index.html  sidebar-items.js  struct.Classification.html  struct.Regression.html
dnn_from_scratch_experiments/: all.html  fn.main.html  index.html  sidebar-items.js
dnn_from_scratch_experiments/mnist_experiment/: fn.run_mnist_experiment.html  index.html  sidebar-items.js  trait.Training.html
dnn_from_scratch_experiments/rssi_experiment/: fn.run_rssi_experiment.html  index.html  sidebar-items.js  trait.Training.html
home_page/: all.html  index.html
search.desc/dnn_from_scratch/: dnn_from_scratch-desc-0-.js
search.desc/dnn_from_scratch_experiments/: dnn_from_scratch_experiments-desc-0-.js
search.desc/home_page/: home_page-desc-0-.js
src/: main.rs
src/dnn_from_scratch/: activation.rs.html  fully_connected.rs.html  lib.rs.html  loss.rs.html  neural_network.rs.html  optimizer.rs.html  report.rs.html  (+2 more)
static/: mnist_experiment_training_history.txt  rssi_experiment_training_history.txt
(+40 files in other folders)
